# VideoExamples

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
Resources/: CMakeLists.txt
VideoEditor/: .clang-format  CMakeLists.txt  VideoEditor.jucer
VideoEditor/Source/: CMakeLists.txt  ClipProperties.cpp  ClipProperties.h  ColourDictionary.h  DockingPanel.cpp  DockingPanel.h  Library.cpp  Library.h  Main.cpp  MainComponent.cpp  MainComponent.h  Player.cpp  Player.h  ProcessorComponent.cpp  ProcessorComponent.h  Properties.cpp  Properties.h  RenderDialog.cpp  RenderDialog.h  TimeLine.cpp  TimeLine.h  TransportControl.cpp  TransportControl.h
VideoPlayer/: VideoPlayer.jucer
libraries/: CMakeLists.txt
modules/: CMakeLists.txt
